updated run scripts for jsxe